fix: home page responsiveness on mobile and desktop

--- a/front-end/src/Styles/InfoIcons.css
+++ b/front-end/src/Styles/InfoIcons.css
@@ -3,9 +3,8 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   font-family: Agrandir,sans-serif;
-  padding-top: 30px;
-  padding-bottom: 30px;
-
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #info-icon-1 img{
@@ -20,15 +19,13 @@
 #info-icon-1 h4{
   text-align: center;
   font-size: 12px;
-  margin: 0px;
-  /* white-space: nowrap; */
+  margin: 20px;
 }
 
 #info-icon-1 p{
   text-align: center;
   font-size: 12px;
   margin: 10px;
-  /* white-space: nowrap; */
 }
 
 #info-icon-2{
@@ -40,7 +37,7 @@
 #info-icon-2 h4{
   text-align: center;
   font-size: 12px;
-  margin: 0px;
+  margin: 20px;
   /* white-space: nowrap; */
 }
 
@@ -60,7 +57,7 @@
 #info-icon-3 h4{
   text-align: center;
   font-size: 12px;
-  margin: 0px;
+  margin: 20px;
   /* white-space: nowrap; */
 }
 
@@ -68,7 +65,6 @@
   text-align: center;
   font-size: 12px;
   margin: 10px;
-  /* white-space: nowrap; */
 }
 
 #info-icon-4{
@@ -80,23 +76,22 @@
 #info-icon-4 h4{
   text-align: center;
   font-size: 12px;
-  margin: 0px;
-  /* white-space: nowrap; */
+  margin: 20px;
 }
 
 #info-icon-4 p{
   text-align: center;
   font-size: 12px;
   margin: 10px;
- /* padding: 10px; */
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   .info-icons-wrapper{
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(1, 1fr);
     text-align: center;
+    width: 600px;
   }
 
   #info-icon-1 img{
@@ -104,21 +99,19 @@
   }
 
   #info-icon-1{
-    /* margin-left: 20px;
-    margin-right: 20px; */
     text-align: center;
   }
   #info-icon-1 h4{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
     white-space: nowrap;
   }
 
   #info-icon-1 p{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
     white-space: nowrap;
   }
   
@@ -129,14 +122,14 @@
   #info-icon-2 h4{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
     white-space: nowrap;
   }
 
   #info-icon-2 p{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
     white-space: nowrap;
   }
   
@@ -147,13 +140,13 @@
   #info-icon-3 h4{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
   }
 
   #info-icon-3 p{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
   }
   
   #info-icon-4{
@@ -163,13 +156,13 @@
   #info-icon-4 h4{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
   }
 
   #info-icon-4 p{
     text-align: center;
     font-size: 12px;
-    margin: 0px;
+    margin: 20px;
   }
 
 }
