--- a/front-end/src/Styles/products.css
+++ b/front-end/src/Styles/products.css
@@ -42,8 +42,8 @@ body{
   border-radius: 8px;
   color: rgb(255, 255, 255);
   font-size: 16px;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  letter-spacing: 10px;
+  font-family:'Open sans', sans-serif;
+  letter-spacing: 1px;
   line-height: 100%;
   padding: 15px 32px;
   text-align: center;
